manifests/openbao/postinstall/overlays/lab/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao-server-routing-dashboard
  namespace: openbao
spec:
  parentRefs:
  - name: clusteringress-frontdoor
    sectionName: https
    namespace: gatewayapi
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - openbao.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openbao-ui
      port: 8200
      weight: 1
      kind: Service
